feat: update Dockerfile